# creative-projects

./: .gitignore  README.md
autograd-engine/: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml  test_enhanced.py
autograd-engine/autograd_engine/: __init__.py  activations.py  cli.py  config.py  engine.py  metrics.py  nn.py  ops.py  schedulers.py  serialization.py  train.py  viz.py
autograd-engine/examples/: 01_basic_gradients.py  02_xor_optimizers.py  03_schedulers.py  04_activations.py  05_serialization.py  06_config_driven.py  07_metrics.py  08_visualization.py
autograd-engine/tests/: __init__.py  test_activations.py  test_bugs.py  test_cli.py  test_config.py  test_engine.py  test_metrics.py  test_nn.py  test_ops.py  test_schedulers.py  test_serialization.py  test_train.py  test_viz.py
basic-interpreter/: CONTRIBUTING.md  LICENSE  README.md  basic.py  config.toml  pyproject.toml  quick_test.py  run_examples.py  test_basic.py  test_bug_fixes.py  test_bug_hunt.py  test_enhanced.py
basic-interpreter/examples/: bottles.bas  collatz.bas  deffn.bas  diamond.bas  fibonacci.bas  gosub.bas  guess.bas  hanoi.bas  hello.bas  mandelbrot.bas  primes.bas  quadratic.bas  sort.bas  strings.bas
basic-interpreter/tests/: conftest.py  test_core.py
bplus-db/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_delete_all.py  pyproject.toml
bplus-db/bplus_db/: __init__.py  bplus_tree.py  cache.py  cli.py  config.py  cursor.py  database.py  io.py  query_parser.py  serializer.py  ttl.py
bplus-db/examples/: advanced_features.py  basic_usage.py  transactions_and_io.py  ttl_and_cache.py
bplus-db/tests/: test_bplus_db.py
btree-store/: CONTRIBUTING.md  README.md  _test_basic.py  _test_enhanced.py  _test_full.py  btree.py  btreestore_cli.py  cli.py  pyproject.toml
btree-store/btreestore/: __init__.py  backup.py  compression.py  config.py  cursor.py  events.py  index.py  logging_util.py  merge.py  pages.py  store.py  streaming_cursor.py  transaction.py  tree.py  ttl.py  wal.py
btree-store/examples/: backup_restore.py  basic_usage.py  bulk_load.py  config.toml  rebalancing.py  secondary_index.py  ttl_expiration.py  wal_recovery.py
btree-store/tests/: test_btree.py  test_btreestore.py  test_bug_hunt.py  test_v4_features.py
bytecode-vm-lang/: CONTRIBUTING.md  README.md  pyproject.toml
bytecode-vm-lang/docs/: architecture.md  language-reference.md
bytecode-vm-lang/examples/: array_demo.ml  bubblesort.ml  elif_demo.ml  fibonacci.ml  gcd.ml  minilang.json  primes.ml  string_demo.ml
bytecode-vm-lang/minilang/: __init__.py  __main__.py  ast.py  bytecode.py  cli.py  compiler.py  errors.py  lexer.py  optimizer.py  parser.py  types.py  value.py  vm.py
bytecode-vm-lang/tests/: test_bugfixes_and_features.py  test_enhancements.py  test_minilang.py
cdcl-sat-solver/: .gitignore  CONTRIBUTING.md  README.md  generator.py  pyproject.toml  solver.py  test_bugs.py  test_solver.py
cdcl-sat-solver/examples/: basic_solving.py  generator_and_config.py  incremental_solving.py  validation_and_counting.py
cdcl-sat-solver/tests/: test_solver.py
cellular-automaton/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
cellular-automaton/cellular_automaton/: __init__.py  analysis.py  cli.py  config.py  continuous.py  engine.py  ltl.py  multistate.py  patterns.py  rules.py  vectorized.py  visualizer.py
cellular-automaton/docs/: ARCHITECTURE.md
cellular-automaton/examples/: 01_rule30.py  02_gosper_gun.py  03_highlife.py  04_wireworld.py  05_classification.py  06_forest_fire.py  07_config.py  08_lyapunov.py  09_gray_scott.py  10_ltl_boon.py  11_fitzhugh_nagumo.py  12_gif_export.py  13_rle_file.py
cellular-automaton/tests/: __init__.py  test_analysis.py  test_bug_hunt.py  test_cli.py  test_config.py  test_continuous.py  test_ltl.py  test_multistate.py  test_new_features.py
chess-engine/: CONTRIBUTING.md  README.md  engine.yaml.example  pyproject.toml
chess-engine/chess_engine/: __init__.py  board.py  cli.py  config.py  evaluate.py  game.py  notation.py  opening_book.py  pgn.py  search.py  transposition.py  uci.py  zobrist.py
chess-engine/tests/: test_engine.py  (+2 more)
chip8-emulator/: CONTRIBUTING.md  README.md  pyproject.toml
circuit-simulator/: CONTRIBUTING.md  LICENSE  README.md  demo.py  pyproject.toml
compression-engine/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
constraint-solver/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cryptanalysis-toolkit/: .gitignore  CONTRIBUTING.md  README.md  cleanup2.py  debug_breaker.py  debug_col.py  debug_col2.py  debug_col3.py  debug_edge.py  debug_edge2.py  debug_enigma.py  debug_friedman.py  debug_ic.py  debug_kasiski.py  debug_xor.py  pyproject.toml
datalog-engine/: CONTRIBUTING.md  README.md  pyproject.toml  test_bug_hunt.py  test_enhanced.py  test_smoke.py
delaunay-voronoi/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
diff-merge/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
earley-parser/: CONTRIBUTING.md  README.md  earley.py  pyproject.toml  test_bugs.py  test_earley.py
evolutionary-optimizer/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
fm-index/: CONTRIBUTING.md  README.md  pyproject.toml
forth-interpreter/: CONTRIBUTING.md  README.md  ci.yml  pyproject.toml  test_quick.py
fractal-explorer/: .gitignore  CONTRIBUTING.md  README.md  fractal.py  fractal_explorer.py  pyproject.toml  test_fractal_explorer.py
gc-simulator/: CONTRIBUTING.md  README.md  pyproject.toml
graph-layout/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
hashlife/: pyproject.toml
hmm-toolkit/: CONTRIBUTING.md  README.md  pyproject.toml
jpeg-codec/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  test_trace.py
kalman-estimator/: CONTRIBUTING.md  README.md  demo.py  demo_nonlinear.py  pyproject.toml
lalr-parser-gen/: CONTRIBUTING.md  README.md  pyproject.toml
maze-generator-solver/: .gitignore  CONTRIBUTING.md  README.md  maze.py  pyproject.toml  test_maze.py  test_maze_v2.py
mcmc-sampler/: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
(+1732 files in other folders)
