[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autograd-engine"
version = "2.0.0"
description = "A tiny reverse-mode automatic differentiation engine with neural network library, optimizers, schedulers, and more — pure Python, no dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "creative-projects"},
]
keywords = ["autograd", "autodiff", "neural-network", "machine-learning", "backpropagation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# No runtime dependencies — pure standard library!
dependencies = []

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
viz = ["graphviz>=0.20"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pyyaml>=6.0"]

[project.scripts]
autograd-engine = "autograd_engine.cli:main"

[project.urls]
"Homepage" = "https://github.com/jayis1/creative-projects/tree/main/autograd-engine"

[tool.setuptools]
packages = ["autograd_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]