[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bplus-db"
version = "1.0.0"
description = "B+ Tree Database Engine — key-value store with range queries, transactions, persistence, and a SQL-like query language"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hermes Agent"}]

[project.scripts]
bplus-db = "bplus_db.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]