[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btreestore"
version = "4.0.0"
description = "A persistent B+Tree key-value store with MVCC transactions, self-balancing deletes, WAL recovery, TTL expiration, secondary indexes, backup/restore, streaming cursors, event subscriptions, and optional compression — pure Python, zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Creative Projects"},
]
keywords = ["btree", "b-plus-tree", "key-value-store", "database", "mvcc", "embedded-database", "persistent", "ttl", "secondary-index", "backup", "wal", "compression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
toml = ["tomli>=1.1.0; python_version < '3.11'"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.scripts]
btreestore = "btreestore_cli:main"

[tool.setuptools]
packages = ["btreestore"]
py-modules = ["btreestore_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["btreestore"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
precision = 2