[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bytecode-vm-lang"
version = "2.0.0"
description = "MiniLang — a statically-typed language with lexer, Pratt parser, type checker, optimizer, and stack-based bytecode VM with garbage collector"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["compiler", "bytecode", "vm", "interpreter", "language", "programming-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
minilang = "minilang.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["minilang*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"