[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellular-automaton"
version = "1.0.0"
description = "1D & 2D cellular automaton simulator: 256 elementary rules, 15 Life variants, custom rules, 19 patterns, ASCII/SVG/PPM/PNG output, CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
png = ["pillow>=9.0"]
dev = ["pytest>=7.0"]

[project.scripts]
cellular-automaton = "cellular_automaton.cli:main"

[tool.setuptools.packages.find]
include = ["cellular_automaton*"]