[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellular-automaton"
version = "4.0.0"
description = "Comprehensive 1D & 2D + continuous cellular automaton engine: 256 elementary rules, 15 Life variants, 5 multi-state CAs, Larger-than-Life, Gray-Scott & FitzHugh-Nagumo reaction-diffusion, custom rules, 19 patterns, RLE file loader, analysis tools (Wolfram classification, entropy, density, sweeps, Lyapunov proxy), config files (JSON/YAML/TOML), logging, ASCII/ANSI/SVG/PPM/PNG/GIF output, CLI with 19 subcommands"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]
keywords = [
    "cellular-automaton",
    "wolfram",
    "game-of-life",
    "conway",
    "wireworld",
    "brians-brain",
    "forest-fire",
    "simulation",
    "generative-art",
    "complexity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
png = ["pillow>=9.0"]
yaml = ["pyyaml>=6.0"]
toml = ["tomli>=2.0; python_version < '3.11'"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pillow>=9.0",
    "pyyaml>=6.0",
]
all = [
    "pillow>=9.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
cellular-automaton = "cellular_automaton.cli:main"

[project.urls]
Homepage = "https://github.com/jayis1/creative-projects"
Repository = "https://github.com/jayis1/creative-projects"

[tool.setuptools.packages.find]
include = ["cellular_automaton*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cellular_automaton"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__",
]