[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "circuit-simulator"
version = "1.0.0"
description = "A digital circuit simulator with propagation delays, sequential logic, and oscilloscope output"
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]