[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-simulator"
version = "2.0.0"
description = "A digital circuit simulator with propagation delays, sequential logic, CDL, oscilloscope output, and CLI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Circuit Simulator Contributors"},
]
keywords = ["circuit", "simulator", "digital", "logic", "oscilloscope", "hdl", "cdl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Electronic Design Automation",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
viz = ["pydot>=2.0"]

[project.scripts]
circuit-sim = "circuit_sim.cli:main"

[tool.setuptools.packages.find]
include = ["circuit_sim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"