[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compression-engine"
version = "3.0.0"
description = "From-scratch data compression engine: Huffman, LZ77, BWT, DEFLATE, RLE, Delta, LZW, Arithmetic coding — with codec pipelines, analysis tools, and CRC32 integrity"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "compression-engine contributors"},
]
keywords = [
    "compression",
    "huffman",
    "lz77",
    "deflate",
    "bwt",
    "rle",
    "delta",
    "lzw",
    "arithmetic-coding",
    "codec",
    "pipeline",
    "data-compression",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
compression-engine = "compression_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["compression_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true