[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "delaunay-voronoi"
version = "1.0.0"
description = "Computational geometry toolkit: Delaunay triangulation, Voronoi diagrams, convex hull, Lloyd's relaxation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["delaunay", "voronoi", "computational-geometry", "convex-hull", "lloyd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.scripts]
delaunay-voronoi = "delaunay_voronoi.cli:main"

[tool.setuptools]
packages = ["delaunay_voronoi"]