[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diff-merge"
version = "1.0.0"
description = "Text diff, patch, and three-way merge toolkit — Myers, Patience, Histogram, LCS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Creative Projects"}]
keywords = ["diff", "patch", "merge", "myers", "patience", "histogram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]

[project.scripts]
diff-merge = "diff_merge.cli:main"

[tool.setuptools.packages.find]
include = ["diff_merge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]