[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "diff-merge"
version = "3.0.0"
description = "Text diff, patch, and three-way merge toolkit — Myers, Patience, Histogram, LCS, side-by-side, HTML, directory diff"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Creative Projects"}]
keywords = ["diff", "patch", "merge", "myers", "patience", "histogram", "lcs",
            "side-by-side", "html-diff", "directory-diff"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
diff-merge = "diff_merge.cli:main"

[tool.setuptools.packages.find]
include = ["diff_merge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]