[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earley-parser"
version = "2.0.0"
description = "Earley chart parser for general context-free grammars with SPPF tree extraction, ambiguity detection, CYK fallback, LL(1) analysis, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Creative Coder Pipeline"},
]
keywords = ["parser", "earley", "cfg", "grammar", "parsing", "compiler", "parse-tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
]

[project.scripts]
earley = "earley_parser.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
yaml = ["pyyaml>=6.0"]
toml = ["tomli>=2.0; python_version<'3.11'"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["earley_parser"]