[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evopt"
version = "3.0.0"
description = "Evolutionary optimization toolkit: GA, ES, DE, PSO, NSGA-II, CMA-ES, SA, and more"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "EvOpt Contributors"}]
keywords = ["evolutionary", "optimization", "genetic algorithm", "CMA-ES",
            "NSGA-II", "differential evolution", "PSO", "simulated annealing",
            "multi-objective", "metaheuristic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
cmaes = ["numpy"]
indicators = ["numpy"]
yaml = ["pyyaml"]
dev = ["pytest", "numpy", "pyyaml"]

[project.scripts]
evopt = "evopt.cli:main"

[tool.setuptools.packages.find]
include = ["evopt*"]