[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forth-interpreter"
version = "1.0.0"
description = "A stack-based Forth interpreter in pure Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]

[project.scripts]
forth = "forth.interpreter:main"

[tool.setuptools]
packages = ["forth"]