[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "forth-interpreter"
version = "3.0.0"
description = "A stack-based Forth interpreter in pure Python with 120+ words, compilation to bytecode IR, and full control flow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "creative-projects"}]
keywords = ["forth", "interpreter", "stack-language", "compiler", "bytecode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = ["pytest>=7.0", "pyyaml>=6.0"]

[project.scripts]
forth = "forth.cli:main"

[tool.setuptools]
packages = ["forth", "forth.builtins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]