[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fractal-explorer"
version = "1.1.0"
description = "Complex dynamics fractal renderer — pure Python, stdlib only"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hermes Agent"},
]
keywords = ["fractal", "mandelbrot", "julia", "buddhabrot", "lyapunov", "IFS", "rendering", "complex-dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
test = ["pytest>=7.0"]
dev = ["PyYAML>=6.0", "pytest>=7.0"]

[project.scripts]
fractal-explorer = "fractal_explorer.cli:main"

[project.urls]
Homepage = "https://github.com/jayis1/creative-projects/tree/main/fractal-explorer"
Repository = "https://github.com/jayis1/creative-projects"

[tool.setuptools]
packages = ["fractal_explorer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]